--- a/azure-openai/request.ipynb
+++ b/azure-openai/request.ipynb
@@ -9,31 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: requests in g:\\zer0ken\\ms-ai-school\\.venv\\lib\\site-packages (2.32.3)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in g:\\zer0ken\\ms-ai-school\\.venv\\lib\\site-packages (from requests) (3.4.1)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in g:\\zer0ken\\ms-ai-school\\.venv\\lib\\site-packages (from requests) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in g:\\zer0ken\\ms-ai-school\\.venv\\lib\\site-packages (from requests) (2.3.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in g:\\zer0ken\\ms-ai-school\\.venv\\lib\\site-packages (from requests) (2025.1.31)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.2 -> 25.0.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install requests"
    ]
@@ -53,7 +31,7 @@
    "source": [
     "import requests\n",
     "\n",
-    "def draw(content):\n",
+    "def ask(content):\n",
     "    header = {\n",
     "        'Content-Type': 'application/json',\n",
     "        'api-key': '<API KEY를 여기에 입력하세요>'\n",
@@ -104,7 +82,7 @@
     "    if not content:\n",
     "        break\n",
     "    print('>>>', content)\n",
-    "    display(Markdown(draw(content)))"
+    "    display(Markdown(ask(content)))"
    ]
   },
   {
@@ -144,11 +122,113 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Markdown\n",
+    "\n",
+    "result = draw('샴고양이')\n",
+    "if result:\n",
+    "    display(Markdown(f'![]({result})'))\n",
+    "else:\n",
+    "    print('요청 횟수가 초과되었습니다.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📚 RAG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "\n",
+    "def ask_rag(content):\n",
+    "    header = {\n",
+    "        'Content-Type': 'application/json',\n",
+    "        'api-key': '<여기에 채팅 API KEY를 입력하세요>'\n",
+    "    }\n",
+    "\n",
+    "    body = {\n",
+    "        \"data_sources\": [\n",
+    "            {\n",
+    "                \"type\": \"azure_search\",\n",
+    "                \"parameters\": {\n",
+    "                    \"endpoint\": \"<여기에 검색 서비스 엔드포인트 URL을 입력하세요>\",\n",
+    "                    \"index_name\": \"<여기에 사용할 인덱스 이름을 입력하세요>\",\n",
+    "                    \"semantic_configuration\": \"default\",\n",
+    "                    \"query_type\": \"simple\",\n",
+    "                    \"fields_mapping\": {},\n",
+    "                    \"in_scope\": True,\n",
+    "                    \"role_information\": \"\",\n",
+    "                    \"filter\": None,\n",
+    "                    \"strictness\": 1,\n",
+    "                    \"top_n_documents\": 5,\n",
+    "                    \"authentication\": {\n",
+    "                        \"type\": \"api_key\",\n",
+    "                        \"key\": \"<여기에 검색 서비스에 대한 API KEY를 입력하세요>\"\n",
+    "                    }\n",
+    "                }\n",
+    "            }\n",
+    "        ],\n",
+    "        \"messages\": [\n",
+    "            {\n",
+    "                \"role\": \"system\",\n",
+    "                \"content\": \"\"\n",
+    "            },\n",
+    "            {\n",
+    "                \"role\": \"user\",\n",
+    "                \"content\": content\n",
+    "            }\n",
+    "        ],\n",
+    "        \"temperature\": 0.7,\n",
+    "        \"top_p\": 0.95,\n",
+    "        \"max_tokens\": 800,\n",
+    "    }\n",
+    "    endpoint_url = '<여기에 채팅 엔드포인트 URL을 입력하세요>'\n",
+    "    response = requests.post(endpoint_url, headers=header, json=body)\n",
+    "    message = response.json()['choices'][0]['message']\n",
+    "    \n",
+    "    return message['content']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "![](https://dalleproduse.blob.core.windows.net/private/images/8ada705b-b684-48e6-93ec-c6375b13f38e/generated_00.png?se=2025-03-12T03%3A33%3A12Z&sig=lXFz8jQxiuG6bTjEpeiIZsIPBb88CrQJ0LvAAgPfxn8%3D&ske=2025-03-18T00%3A52%3A45Z&skoid=09ba021e-c417-441c-b203-c81e5dcd7b7f&sks=b&skt=2025-03-11T00%3A52%3A45Z&sktid=33e01921-4d64-4f8c-a055-5bdaffd5e33d&skv=2020-10-02&sp=r&spr=https&sr=b&sv=2020-10-02)"
+       "추천할 만한 데이트 명소는 다음과 같습니다:\n",
+       "\n",
+       "1. **남해 독일마을**  \n",
+       "   - 아름다운 경치와 독일식 건축물들이 인상적인 곳으로, 다양한 음식과 카페가 있어 데이트에 적합합니다.  \n",
+       "   - 전화: 055-867-0706 \n",
+       "\n",
+       "2. **남해 해수욕장**  \n",
+       "   - 여름철에 특히 인기 있는 해수욕장으로, 해변에서 즐길 수 있는 다양한 액티비티가 마련되어 있습니다.  \n",
+       "   - 전화: 055-867-2021 [doc2]\n",
+       "\n",
+       "3. **남해 금산**  \n",
+       "   - 경치가 아름답고 하이킹을 즐길 수 있는 곳으로, 자연을 만끽하며 데이트하기 좋은 장소입니다.  \n",
+       "   - 전화: 055-860-8631 [doc3]\n",
+       "\n",
+       "4. **남해 온천**  \n",
+       "   - 편안한 온천에서 휴식을 취하면서 데이트를 즐길 수 있는 곳으로, 다양한 스파 서비스가 제공됩니다.  \n",
+       "   - 전화: 055-860-8631 [doc4]\n",
+       "\n",
+       "5. **남해 바다 전망대**  \n",
+       "   - 일몰이나 일출을 감상할 수 있는 멋진 장소로, 특별한 순간을 공유하기에 좋은 곳입니다.  \n",
+       "   - 전화: 055-860-8631 [doc5]\n",
+       "\n",
+       "각 명소는 독특한 매력을 가지고 있으니, 취향에 맞는 장소를 선택해보세요!"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -161,19 +241,9 @@
    "source": [
     "from IPython.display import Markdown\n",
     "\n",
-    "result = draw('샴고양이')\n",
-    "if result:\n",
-    "    display(Markdown(f'![]({result})'))\n",
-    "else:\n",
-    "    print('요청 횟수가 초과되었습니다.')"
+    "result = ask_rag('데이트 명소 추천해줘.')\n",
+    "display(Markdown(result))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
