--- a/azure-openai/request.ipynb
+++ b/azure-openai/request.ipynb
@@ -150,9 +150,19 @@
     "\n",
     "\n",
     "def ask_rag(content):\n",
+    "    # 아래 변수에 환경에 맞는 값을 할당하세요 \n",
+    "    ENDPOINT = '***' # 엔드포인트(채팅 플레이그라운드)             \n",
+    "    API_KEY = '***'  # API KEY(채팅 플레이그라운드)\n",
+    "\n",
+    "    SEARCH_ENDPOINT = '***'      # Search Service 엔드포인트\n",
+    "    SEARCH_API_KEY = '***'       # Search Service API KEY\n",
+    "    SEARCH_INDEX_NAME = '***'    # 'travel-index-lucene', 'travel-index-microsoft', ...\n",
+    "    SEARCH_CONFIGURATION = '***' # 'default'\n",
+    "    # ===\n",
+    "    \n",
     "    header = {\n",
     "        'Content-Type': 'application/json',\n",
-    "        'api-key': '<여기에 채팅 API KEY를 입력하세요>'\n",
+    "        'api-key': API_KEY\n",
     "    }\n",
     "\n",
     "    body = {\n",
@@ -160,19 +170,18 @@
     "            {\n",
     "                \"type\": \"azure_search\",\n",
     "                \"parameters\": {\n",
-    "                    \"endpoint\": \"<여기에 검색 서비스 엔드포인트 URL을 입력하세요>\",\n",
-    "                    \"index_name\": \"<여기에 사용할 인덱스 이름을 입력하세요>\",\n",
-    "                    \"semantic_configuration\": \"default\",\n",
+    "                    \"endpoint\": SEARCH_ENDPOINT,\n",
+    "                    \"index_name\": SEARCH_INDEX_NAME,\n",
+    "                    \"semantic_configuration\": SEARCH_CONFIGURATION,\n",
     "                    \"query_type\": \"simple\",\n",
     "                    \"fields_mapping\": {},\n",
     "                    \"in_scope\": True,\n",
-    "                    \"role_information\": \"\",\n",
     "                    \"filter\": None,\n",
     "                    \"strictness\": 1,\n",
-    "                    \"top_n_documents\": 5,\n",
+    "                    \"top_n_documents\": 3,\n",
     "                    \"authentication\": {\n",
     "                        \"type\": \"api_key\",\n",
-    "                        \"key\": \"<여기에 검색 서비스에 대한 API KEY를 입력하세요>\"\n",
+    "                        \"key\": SEARCH_API_KEY\n",
     "                    }\n",
     "                }\n",
     "            }\n",
@@ -180,19 +189,18 @@
     "        \"messages\": [\n",
     "            {\n",
     "                \"role\": \"system\",\n",
-    "                \"content\": \"\"\n",
+    "                \"content\": \"너는 여행 전문가야.\"\n",
     "            },\n",
     "            {\n",
     "                \"role\": \"user\",\n",
     "                \"content\": content\n",
     "            }\n",
     "        ],\n",
-    "        \"temperature\": 0.7,\n",
+    "        \"temperature\": 0.2,\n",
     "        \"top_p\": 0.95,\n",
     "        \"max_tokens\": 800,\n",
     "    }\n",
-    "    endpoint_url = '<여기에 채팅 엔드포인트 URL을 입력하세요>'\n",
-    "    response = requests.post(endpoint_url, headers=header, json=body)\n",
+    "    response = requests.post(ENDPOINT, headers=header, json=body)\n",
     "    message = response.json()['choices'][0]['message']\n",
     "    \n",
     "    return message['content']"
@@ -200,35 +208,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "추천할 만한 데이트 명소는 다음과 같습니다:\n",
+       "데이트를 위한 추천 명소는 다음과 같습니다:\n",
        "\n",
-       "1. **남해 독일마을**  \n",
-       "   - 아름다운 경치와 독일식 건축물들이 인상적인 곳으로, 다양한 음식과 카페가 있어 데이트에 적합합니다.  \n",
-       "   - 전화: 055-867-0706 \n",
+       "1. **해운대 해수욕장** - 부산의 대표적인 해변으로, 아름다운 바다 경치와 함께 다양한 해양 스포츠를 즐길 수 있습니다. 특히 저녁에는 해변가에서 산책하기 좋은 장소입니다 [doc1].\n",
        "\n",
-       "2. **남해 해수욕장**  \n",
-       "   - 여름철에 특히 인기 있는 해수욕장으로, 해변에서 즐길 수 있는 다양한 액티비티가 마련되어 있습니다.  \n",
-       "   - 전화: 055-867-2021 [doc2]\n",
+       "2. **남해 독일마을** - 독일의 전통적인 건축 양식을 느낄 수 있는 마을로, 아름다운 경치와 함께 독일 음식도 맛볼 수 있습니다. 이곳은 사진 찍기 좋은 포토존이 많아 데이트에 적합합니다 [doc2].\n",
        "\n",
-       "3. **남해 금산**  \n",
-       "   - 경치가 아름답고 하이킹을 즐길 수 있는 곳으로, 자연을 만끽하며 데이트하기 좋은 장소입니다.  \n",
-       "   - 전화: 055-860-8631 [doc3]\n",
+       "3. **거제도** - 아름다운 해변과 자연 경관이 어우러진 거제도는 연인과 함께 힐링할 수 있는 최적의 장소입니다. 특히 바람의 언덕과 해금강은 꼭 방문해볼 만한 명소입니다 [doc3].\n",
        "\n",
-       "4. **남해 온천**  \n",
-       "   - 편안한 온천에서 휴식을 취하면서 데이트를 즐길 수 있는 곳으로, 다양한 스파 서비스가 제공됩니다.  \n",
-       "   - 전화: 055-860-8631 [doc4]\n",
-       "\n",
-       "5. **남해 바다 전망대**  \n",
-       "   - 일몰이나 일출을 감상할 수 있는 멋진 장소로, 특별한 순간을 공유하기에 좋은 곳입니다.  \n",
-       "   - 전화: 055-860-8631 [doc5]\n",
-       "\n",
-       "각 명소는 독특한 매력을 가지고 있으니, 취향에 맞는 장소를 선택해보세요!"
+       "이 외에도 다양한 명소가 있으니, 데이트 스타일에 맞춰 선택해보세요!"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
