--- a/azure-openai/request.ipynb
+++ b/azure-openai/request.ipynb
@@ -158,6 +158,8 @@
     "    SEARCH_API_KEY = '***'       # Search Service API KEY\n",
     "    SEARCH_INDEX_NAME = '***'    # 'travel-index-lucene', 'travel-index-microsoft', ...\n",
     "    SEARCH_CONFIGURATION = '***' # 'default'\n",
+    "    \n",
+    "    SYSTEM_INSTRUCTION = ''      # 시스템 지시사항(시스템 메시지)\n",
     "    # ===\n",
     "    \n",
     "    header = {\n",
@@ -189,7 +191,7 @@
     "        \"messages\": [\n",
     "            {\n",
     "                \"role\": \"system\",\n",
-    "                \"content\": \"너는 여행 전문가야.\"\n",
+    "                \"content\": SYSTEM_INSTRUCTION\n",
     "            },\n",
     "            {\n",
     "                \"role\": \"user\",\n",
@@ -208,21 +210,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "데이트를 위한 추천 명소는 다음과 같습니다:\n",
+       "데이트를 위한 명소로는 다음과 같은 장소들을 추천합니다:\n",
        "\n",
-       "1. **해운대 해수욕장** - 부산의 대표적인 해변으로, 아름다운 바다 경치와 함께 다양한 해양 스포츠를 즐길 수 있습니다. 특히 저녁에는 해변가에서 산책하기 좋은 장소입니다 [doc1].\n",
+       "1. **남해 다랭이마을**: 아름다운 경치를 감상할 수 있는 곳으로, 다랭이논과 바다가 어우러진 풍경이 매력적입니다. 특히 해질 무렵의 경치가 로맨틱합니다 .\n",
        "\n",
-       "2. **남해 독일마을** - 독일의 전통적인 건축 양식을 느낄 수 있는 마을로, 아름다운 경치와 함께 독일 음식도 맛볼 수 있습니다. 이곳은 사진 찍기 좋은 포토존이 많아 데이트에 적합합니다 [doc2].\n",
+       "2. **해운대 해수욕장**: 부산의 대표적인 해변으로, 여름철에는 해수욕을 즐길 수 있고, 해변가의 카페와 레스토랑에서 저녁 식사를 하며 바다를 감상할 수 있습니다 .\n",
        "\n",
-       "3. **거제도** - 아름다운 해변과 자연 경관이 어우러진 거제도는 연인과 함께 힐링할 수 있는 최적의 장소입니다. 특히 바람의 언덕과 해금강은 꼭 방문해볼 만한 명소입니다 [doc3].\n",
+       "3. **가평 아침고요수목원**: 다양한 식물과 꽃들이 있는 수목원으로, 사계절 내내 아름다운 경관을 제공합니다. 특히 봄과 가을에 방문하면 더욱 좋습니다 [doc3].\n",
        "\n",
-       "이 외에도 다양한 명소가 있으니, 데이트 스타일에 맞춰 선택해보세요!"
+       "4. **서울숲**: 도심 속에서 자연을 느낄 수 있는 공간으로, 산책로와 자전거 도로가 잘 조성되어 있어 여유로운 데이트를 즐기기에 적합합니다 [doc1].\n",
+       "\n",
+       "이 외에도 다양한 명소가 있으니, 원하는 분위기에 맞춰 선택해 보세요!"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
