--- a/ai-vision/vision-analysis.ipynb
+++ b/ai-vision/vision-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,39 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'modelVersion': '2023-10-01',\n",
-       " 'metadata': {'width': 710, 'height': 473},\n",
-       " 'readResult': {'blocks': [{'lines': [{'text': 'kraw.',\n",
-       "      'boundingPolygon': [{'x': 470, 'y': 240},\n",
-       "       {'x': 493, 'y': 258},\n",
-       "       {'x': 487, 'y': 268},\n",
-       "       {'x': 463, 'y': 249}],\n",
-       "      'words': [{'text': 'kraw.',\n",
-       "        'boundingPolygon': [{'x': 470, 'y': 240},\n",
-       "         {'x': 494, 'y': 258},\n",
-       "         {'x': 487, 'y': 267},\n",
-       "         {'x': 463, 'y': 248}],\n",
-       "        'confidence': 0.595}]},\n",
-       "     {'text': 'AIA',\n",
-       "      'boundingPolygon': [{'x': 305, 'y': 304},\n",
-       "       {'x': 415, 'y': 311},\n",
-       "       {'x': 412, 'y': 357},\n",
-       "       {'x': 304, 'y': 354}],\n",
-       "      'words': [{'text': 'AIA',\n",
-       "        'boundingPolygon': [{'x': 308, 'y': 304},\n",
-       "         {'x': 407, 'y': 309},\n",
-       "         {'x': 405, 'y': 358},\n",
-       "         {'x': 306, 'y': 354}],\n",
-       "        'confidence': 0.57}]}]}]}}"
+       "'{\"error\":{\"code\":\"401\",\"message\":\"Access denied due to invalid subscription key or wrong API endpoint. Make sure to provide a valid key for an active subscription and use a correct regional API endpoint for your resource.\"}}'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,14 +175,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7881\n",
+      "* Running on local URL:  http://127.0.0.1:7860\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -213,7 +190,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7881/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -226,7 +203,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 53,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,13 +237,6 @@
     "    )\n",
     "demo.launch()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
